[gd_scene load_steps=21 format=3 uid="uid://dmg00ajypj0x6"]

[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="1_rmlkv"]
[ext_resource type="Texture2D" uid="uid://dnw6qh3swexew" path="res://Assets/Enemy Assets/Small Bee/Attack/Attack-Sheet.png" id="2_78l3p"]
[ext_resource type="Texture2D" uid="uid://kr73s24klbj6" path="res://Assets/Enemy Assets/Small Bee/Fly/Fly-Sheet.png" id="3_umy3h"]
[ext_resource type="Texture2D" uid="uid://b8huun3yjsjjb" path="res://Assets/Enemy Assets/Small Bee/Hit/Hit-Sheet.png" id="4_4eoab"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e7b25"]
atlas = ExtResource("2_78l3p")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_48qma"]
atlas = ExtResource("2_78l3p")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kr03d"]
atlas = ExtResource("2_78l3p")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3lbs"]
atlas = ExtResource("2_78l3p")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1pid"]
atlas = ExtResource("3_umy3h")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnkso"]
atlas = ExtResource("3_umy3h")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbpya"]
atlas = ExtResource("3_umy3h")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxea3"]
atlas = ExtResource("3_umy3h")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7013x"]
atlas = ExtResource("4_4eoab")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgcoc"]
atlas = ExtResource("4_4eoab")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8i6d5"]
atlas = ExtResource("4_4eoab")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8wxv"]
atlas = ExtResource("4_4eoab")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_qu1da"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7b25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48qma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kr03d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3lbs")
}],
"loop": false,
"name": &"enemyAttack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1pid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnkso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbpya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxea3")
}],
"loop": true,
"name": &"enemyFly",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7013x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgcoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8i6d5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8wxv")
}],
"loop": false,
"name": &"enemyHit",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bbylj"]
size = Vector2(17, 25)

[sub_resource type="CircleShape2D" id="CircleShape2D_8j8me"]
radius = 75.0067

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rmoog"]
size = Vector2(22, 23)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_rmlkv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_qu1da")
animation = &"enemyHit"
frame = 2
frame_progress = 0.120867

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -33.5)
shape = SubResource("RectangleShape2D_bbylj")

[node name="Area2D" type="Area2D" parent="." groups=["enemygroup"]]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -33)
shape = SubResource("CircleShape2D_8j8me")

[node name="enemyHealthBar" type="ProgressBar" parent="."]
modulate = Color(0.712747, 0.101429, 0.366948, 1)
offset_left = -19.0
offset_top = -54.0
offset_right = 171.0
offset_bottom = -27.0
scale = Vector2(0.2, 0.2)
show_percentage = false

[node name="damagePlayerArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="damagePlayerArea"]
position = Vector2(-21, -29.5)
shape = SubResource("RectangleShape2D_rmoog")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="damagePlayerArea"]
position = Vector2(22, -29)
shape = SubResource("RectangleShape2D_rmoog")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="health_bar_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="area_entered" from="damagePlayerArea" to="." method="_on_damage_player_area_area_entered"]
[connection signal="area_exited" from="damagePlayerArea" to="." method="_on_damage_player_area_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="health_bar_timer" to="." method="_on_health_bar_timer_timeout"]
